feat: call: ステップ廃止 + run: 出力ファイル保存 (#1438)
## call: ステップの廃止
- lib/step-runner.sh: run_call_step() を削除
- lib/workflow-loader.sh: call: を検出時に警告出力してスキップ（後方互換）
- scripts/watch-session.sh: call: 実行分岐を削除
- schemas/pi-runner.schema.json: callStep 定義を削除
- agents/code-review.md: call: 専用テンプレートを削除
- .pi-runner.yaml: call: ステップをAIステップに置換、call専用ワークフロー定義を削除

## run: 出力ファイル保存
- lib/step-runner.sh: save_run_output(), sanitize_filename() を追加
  - 実行結果を .pi/run-outputs/<description>.log に自動保存
  - メタデータヘッダ（コマンド、終了コード、タイムスタンプ）付き
  - 100KB超は先頭切り捨て
- scripts/watch-session.sh:
  - 成功時の nudge に実行結果ファイル参照を追加
  - 失敗時の nudge に出力ファイルパスを追記

## ドキュメント・テスト
- docs/workflows.md, SPECIFICATION.md, architecture.md, configuration.md, overview.md を更新
- AGENTS.md のディレクトリ構造を更新
- test/lib/step-runner.bats: sanitize_filename, save_run_output, 出力保存のテスト追加
- test/lib/workflow-loader.bats: call: 非推奨テストに変更

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -116,15 +116,7 @@ workflows:
       - run: "bats --jobs 2 test/"
         timeout: 900
         description: "Bats テスト"
-      - call: review-bugs
-        timeout: 900
-        description: "バグ・ロジックエラーレビュー"
-      - call: review-security
-        timeout: 900
-        description: "セキュリティレビュー"
-      - call: review-ai-antipattern
-        timeout: 900
-        description: "AI実装アンチパターンレビュー"
+      - review
       - merge
     agent:
       type: opencode
@@ -155,12 +147,7 @@ workflows:
       - run: "bats --jobs 2 test/"
         timeout: 900
         description: "Bats テスト"
-      - call: review-bugs
-        timeout: 900
-        description: "バグ・ロジックエラーレビュー"
-      - call: review-security
-        timeout: 900
-        description: "セキュリティレビュー"
+      - review
       - merge
     context: |
       ## 方針
@@ -207,39 +194,6 @@ workflows:
       - setup/teardown で環境を確実にクリーンアップ
       - 並列実行 (BATS_JOBS=4) でも安定するよう、グローバル状態を汚染しない
       - reset_yaml_cache, _YQ_CHECK_RESULT="" を setup で呼ぶ
-
-  # 観点別レビュー用ワークフロー（call: ステップから呼び出される）
-  review-bugs:
-    description: バグ・ロジックエラーのレビュー
-    steps:
-      - review-bugs
-    agent:
-      type: pi
-      args: [--provider, anthropic, --model, claude-haiku-4-5]
-
-  review-security:
-    description: セキュリティレビュー
-    steps:
-      - review-security
-    agent:
-      type: pi
-      args: [--provider, anthropic, --model, claude-haiku-4-5]
-
-  review-architecture:
-    description: 設計・構造レビュー
-    steps:
-      - review-architecture
-    agent:
-      type: pi
-      args: [--provider, anthropic, --model, claude-haiku-4-5]
-
-  review-ai-antipattern:
-    description: AI実装アンチパターンレビュー
-    steps:
-      - review-ai-antipattern
-    agent:
-      type: pi
-      args: [--provider, anthropic, --model, claude-haiku-4-5]
 
   # 簡易修正: 実装→マージのみ（軽量モデルで高速・低コスト、品質チェック不要）
   quickfix:
