refactor: update .pi-runner.yaml to new workflow format
## Changes
- Removed all `run:` steps (ShellCheck, bats tests)
- Merged quality checks into implement step via `context`
- Added per-step context with instructions for:
  - Parallel execution via subagent
  - Test execution
  - ShellCheck validation
  - Commit/push workflow
- Added `simple` workflow for minimal implementation
- Removed deprecated agent overrides per workflow

## New Format Example
```yaml
steps:
  - implement:
      context: |
        Use subagent for parallel file creation.
        After implementation, run:
        1. shellcheck scripts/*.sh lib/*.sh
        2. bats --jobs 2 test/
        3. git commit && git push
```

This aligns with the simplified workflow engine that uses
TASK_COMPLETE marker only and lets AI handle all execution.

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -39,15 +39,7 @@ multiplexer:
 # =====================================
 agent:
   # エージェントタイプ: pi | claude | opencode | custom
-  # 空の場合は pi セクションの設定を使用（後方互換性）
   type: "pi"
-
-  # カスタムコマンド（type: custom の場合に使用）
-  # command: "my-agent"
-
-  # カスタムテンプレート（type: custom の場合に使用）
-  # 利用可能な変数: {{command}}, {{args}}, {{prompt_file}}
-  # template: "{{command}} {{args}} < {{prompt_file}}"
 
   # エージェントに渡す追加引数
   args:
@@ -77,11 +69,7 @@ parallel:
 # auto ワークフロー選択設定
 # =====================================
 auto:
-  # auto選択用のAIプロバイダー（省略時: agent設定から推定 or kimi-coding）
   provider: kimi-coding
-
-  # auto選択用のモデル（軽量・高速なモデル推奨）
-  # 省略時: claude-haiku-4-5
   model: k2p5
 
 # =====================================
@@ -89,42 +77,39 @@ auto:
 # -w 省略時は auto（AIがIssue内容から自動選択）
 # =====================================
 workflows:
-  # 標準: 計画→実装→品質チェック→レビュー→マージ
+  # 標準: 計画→実装→レビュー→マージ
   default:
-    description: 標準ワークフロー（計画・実装・品質チェック・レビュー・マージ）
+    description: 標準ワークフロー（計画・実装・レビュー・マージ）
     steps:
       - plan
-      - implement
-      - test
-      - run: "shellcheck -x scripts/*.sh lib/*.sh"
-        description: "ShellCheck 静的解析"
-      - run: "bats --jobs 2 test/"
-        timeout: 900
-        description: "Bats テスト"
+      - implement:
+          context: |
+            実装完了後、必ず以下を実行してください：
+            1. ShellCheck: `shellcheck -x scripts/*.sh lib/*.sh`
+            2. テスト: `bats --jobs 2 test/`
+            3. 両方パスしたらコミット・プッシュ
       - review
       - merge
 
-  # 機能追加: 計画→実装→品質チェック→観点別レビュー→マージ
+  # 機能追加: 計画→実装→レビュー→マージ
   feature:
     description: 新機能・大規模変更（lib/scripts への新関数追加、新スクリプト作成）
     steps:
       - plan
-      - implement
-      - test
-      - run: "shellcheck -x scripts/*.sh lib/*.sh"
-        description: "ShellCheck 静的解析"
-      - run: "bats --jobs 2 test/"
-        timeout: 900
-        description: "Bats テスト"
+      - implement:
+          context: |
+            実装時の方針：
+            - 複数ファイルを並列作成する場合は subagent を使用
+            - 新しい lib/ には対応する test/lib/*.bats を必ず作成
+            - 新しい scripts/ には対応する test/scripts/*.bats を必ず作成
+
+            実装完了後、必ず以下を実行：
+            1. ShellCheck: `shellcheck -x scripts/*.sh lib/*.sh`
+            2. テスト: `bats --jobs 2 test/`
+            3. AGENTS.md のディレクトリ構造を更新
+            4. コミット・プッシュ
       - review
       - merge
-    agent:
-      type: pi
-      args:
-        - --provider
-        - kimi-coding
-        - --model
-        - k2p5
     context: |
       ## 技術スタック
       - Bash 4.0+ / ShellCheck 準拠
@@ -134,82 +119,76 @@ workflows:
       ## 方針
       - 全ファイルに `set -euo pipefail` を設定
       - 関数は小文字スネークケース、ローカル変数は `local` 宣言
-      - 新しい lib/ には対応する test/lib/*.bats を必ず作成
-      - 新しい scripts/ には対応する test/scripts/*.bats を必ず作成
-      - AGENTS.md のディレクトリ構造を更新すること
 
-  # バグ修正・リファクタリング: 実装→品質チェック→バグ+セキュリティレビュー→マージ
+  # バグ修正・リファクタリング
   fix:
     description: バグ修正・リファクタリング・セキュリティ修正
     steps:
-      - implement
-      - test
-      - run: "shellcheck -x scripts/*.sh lib/*.sh"
-        description: "ShellCheck 静的解析"
-      - run: "bats --jobs 2 test/"
-        timeout: 900
-        description: "Bats テスト"
+      - implement:
+          context: |
+            実装時の方針：
+            - 修正範囲を最小限に抑える
+            - 回帰テスト (test/regression/) の追加を検討
+
+            実装完了後、必ず以下を実行：
+            1. ShellCheck: `shellcheck -x scripts/*.sh lib/*.sh`
+            2. テスト: `bats --jobs 2 test/`
+            3. 既存テストが壊れていないことを確認
+            4. コミット・プッシュ
       - review
       - merge
     context: |
       ## 方針
-      - 回帰テスト (test/regression/) の追加を検討すること
-      - 修正範囲を最小限に抑える
       - ShellCheck 警告を解消すること
-      - 既存テストが壊れないことを確認
+      - 既存機能の後方互換性を維持すること
 
-  # ドキュメント: 実装→マージ（軽量モデルで十分、品質チェック不要）
+  # ドキュメント: 実装→マージ（軽量モデルで十分）
   docs:
     description: ドキュメント更新（README, AGENTS.md, docs/ 以下）
     steps:
-      - implement
+      - implement:
+          context: |
+            ドキュメント作成時の確認事項：
+            - docs/ 以下の既存ドキュメントとの整合性
+            - AGENTS.md のディレクトリ構造が実態と一致しているか
+            - コード例は実際に動作するものを記載
+            
+            完了後、コミット・プッシュ
       - merge
-    agent:
-      type: pi
-      args:
-        - --provider
-        - kimi-coding
-        - --model
-        - k2p5
-    context: |
-      ## 方針
-      - docs/ 以下の既存ドキュメントとの整合性を確認
-      - AGENTS.md のディレクトリ構造が実態と一致しているか確認
-      - コード例は実際に動作するものを記載
 
-  # テスト追加: 実装→品質チェック→レビュー→マージ
+  # テスト追加: 実装→レビュー→マージ
   test:
     description: テスト追加・テスト改善
     steps:
-      - implement
-      - test
-      - run: "shellcheck -x scripts/*.sh lib/*.sh"
-        description: "ShellCheck 静的解析"
-      - run: "bats --jobs 2 test/"
-        timeout: 900
-        description: "Bats テスト"
+      - implement:
+          context: |
+            テスト作成時の方針：
+            - Bats テストの規約に従う（test_helper.bash のモック関数を活用）
+            - setup/teardown で環境を確実にクリーンアップ
+            - グローバル状態を汚染しない（reset_yaml_cache, _YQ_CHECK_RESULT="" を setup で呼ぶ）
+
+            実装完了後、必ず以下を実行：
+            1. ShellCheck: `shellcheck -x scripts/*.sh lib/*.sh`
+            2. テスト: `bats --jobs 2 test/`
+            3. コミット・プッシュ
       - review
       - merge
-    context: |
-      ## 方針
-      - Bats テストの規約に従う（test_helper.bash のモック関数を活用）
-      - setup/teardown で環境を確実にクリーンアップ
-      - 並列実行 (BATS_JOBS=4) でも安定するよう、グローバル状態を汚染しない
-      - reset_yaml_cache, _YQ_CHECK_RESULT="" を setup で呼ぶ
 
-  # 簡易修正: 実装→マージのみ（軽量モデルで高速・低コスト、品質チェック不要）
+  # 簡易修正: 実装→マージのみ（軽微な変更）
   quickfix:
     description: typo修正・設定値変更・コメント修正など軽微な変更
     steps:
+      - implement:
+          context: |
+            軽微な修正のみ行い、コミット・プッシュ
+      - merge
+
+  # シンプル: 実装→マージ（テストなし、最速）
+  simple:
+    description: 最もシンプルなワークフロー（実装のみ）
+    steps:
       - implement
       - merge
-    agent:
-      type: pi
-      args:
-        - --provider
-        - kimi-coding
-        - --model
-        - k2p5
 
 # =====================================
 # 計画書設定
@@ -226,19 +205,12 @@ plans:
 # =====================================
 improve:
   # カスタムレビュープロンプトファイル
-  # 検索順: この設定 → agents/improve-review.md → .pi/agents/improve-review.md → ビルトイン
-  # テンプレート変数: {{max_issues}}, {{session_label}}, {{review_context}}
   review_prompt_file: "agents/improve-review.md"
 
   # ログ設定
   logs:
-    # 保持するログファイルの件数（0 = 全て保持）
     keep_recent: 10
-
-    # 保持するログファイルの日数（0 = 日数制限なし）
     keep_days: 7
-
-    # ログファイルの保存ディレクトリ
     dir: ".improve-logs"
 
 # =====================================
@@ -246,7 +218,6 @@ improve:
 # =====================================
 hooks:
   # インラインコマンドの実行を許可（デフォルト: false）
-  # .pi-runner.yaml にインラインhookを書く場合は true に設定
   allow_inline: true
 
   # 成功時の通知
@@ -257,11 +228,11 @@ hooks:
   on_error: |
     osascript -e 'display notification "'"$PI_ERROR_MESSAGE"'" with title "Pi Issue Runner" subtitle "❌ Issue #'"$PI_ISSUE_NUMBER"' エラー" sound name "Basso"'
 
-  # セッション開始時（コメント解除で有効化）
+  # セッション開始時
   on_start: |
     osascript -e 'display notification "Issue #'"$PI_ISSUE_NUMBER"' を開始しました" with title "Pi Issue Runner" subtitle "🚀 開始" sound name "Pop"'
 
-  # クリーンアップ後（コメント解除で有効化）
+  # クリーンアップ後
   on_cleanup: |
     echo "Cleanup completed for Issue #$PI_ISSUE_NUMBER"
 
@@ -290,9 +261,7 @@ hooks:
 # =====================================
 watcher:
   # PRマージタイムアウト時に強制クリーンアップ
-  # COMPLETEマーカー検出後、PRがマージされなくてもセッションを終了する
   force_cleanup_on_timeout: true
 
   # エラー検知時にターミナルを自動で開いてセッションにアタッチする
-  # Terminal.app以外（Ghostty等）を使用する場合はfalseに設定
   auto_attach: false
