feat: add subagent definitions in .pi/agents/
## Added Agents
- orchestrator: Master delegator and strategic coordinator
- explorer: Codebase reconnaissance and analysis
- designer: Architecture and detailed design
- implementer: Implementation with coding standards
- reviewer: Code review and quality check
- tester: Test creation and execution
- librarian: Documentation management (AGENTS.md, etc.)
- fixer: Error fixing and review comment resolution

## Gitignore Update
- Track .pi/agents/ directory
- Keep .pi/ other contents ignored

## Usage Example
```javascript
subagent({
  tasks: [
    { agent: "explorer", task: "Analyze codebase structure" },
    { agent: "designer", task: "Create implementation design" },
    { agent: "implementer", task: "Implement the solution" },
    { agent: "reviewer", task: "Review the implementation" }
  ]
})
```

Inspired by oh-my-opencode-slim Pantheon Agents pattern.

--- a/.gitignore
+++ b/.gitignore
@@ -59,8 +59,10 @@ feature/
 # pi-issue-runner
 .pi-runner.yaml.local
 
-# Pi Agent (but allow skills)
-.pi/
+# Pi Agent (but allow skills and agents)
+.pi/*
+!.pi/skills/
+!.pi/agents/
 
 # Serena
 .serena/
